@startuml
'https://plantuml.com/class-diagram

package Establecimientos {
    abstract class Establecimiento{
        nombre : String
        localizacion: <Localizacion>
        servicios: List<Servicio>
        agrupaciones: List<Agrupacion>
        obtenerListaTiemposCierre(): List<Duration>
        cantidadDeIncidentes(): Int
        incidentesDelEstablecimiento(): List<Incidente>
    }

  class Sucursal{
  }

  class Estacion{
     serviciosFaltantes():List<Servicio>
  }

  class "RepoIncidentes" as CopiaRepoIncidentes{
      }

  Sucursal-down-|>Establecimiento
  Estacion-down-|>Establecimiento
  Establecimiento..>CopiaRepoIncidentes
}

@enduml